--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 } */
+
+h1 {
+  text-align: center;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: #232f3e;
+  margin: 32px 0 18px 0;
+  letter-spacing: 0.01em;
+}
